# drbac

./: .gitignore  Cargo.toml  Makefile  README.md  commands.txt  public.pem  public_key.pem  sample.db  secret.pem  secret_key.pem
ca/: Cargo.toml  ca_public.pem  ca_secret.pem  localhost.csr
ca/src/: lib.rs
central/: Cargo.toml  cert.json  public_key.pem  sample.db  secret_key.pem
central/src/: lib.rs  main.rs  server.rs
common/: Cargo.toml  sample.db
common/migrations/2021-09-28-080036_create_delegations/: down.sql  up.sql
common/src/: actor_type.rs  actors.rs  connection.rs  constants.rs  crypto.rs  encoding.rs  enums.rs  io.rs  jail.rs  lib.rs  messages.rs  models.rs  pki.rs  policy.rs  schema.rs  socket_server.rs  state.rs  stream.rs  utils.rs
common/src/actor_type/: utils.rs
common/src/actors/: utils.rs
common/src/crypto/: aes.rs  diffie_hellman.rs  traits.rs
common/src/db/: models.rs  utils.rs
common/src/db/models/: actor.rs  delegation.rs  entity.rs  entity_central_relation.rs  role.rs  user.rs
common/src/handlers/client/: crypto_channel.rs
common/src/handlers/server/: crypto_channel.rs
common/src/messages/: common_crypto.rs  encoding.rs  handlers.rs  headers.rs
common/src/messages/handlers/: crypto_channel.rs  identificate.rs
common/src/templates/: fc.hbs  te.hbs
entity/: Cargo.toml  cert.json  public_key.pem  sample.db  secret_key.pem
entity/3ed464de-332d-4690-bc6d-9d51a99850cd/etc/: group  passwd
entity/57bff593-5dca-4337-b5af-d98cb7ff10fb/etc/: group  passwd
entity/role_maps/: 3ed464de-332d-4690-bc6d-9d51a99850cd.json
entity/src/: client.rs  lib.rs  listener.rs  main.rs
entity/src/client/: connection.rs  constants.rs  handlers.rs  request.rs  state.rs
entity/src/client/handlers/: commands.rs  connection.rs  crypto_channel.rs  identificate.rs  registration.rs  roles.rs  whoami.rs
entity/src/listener/: handlers.rs  request.rs  state.rs
entity/src/listener/handlers/: commands.rs  crypto_channel.rs
main/: Cargo.toml  public_key.pem  sample.db  secret_key.pem
main/src/: main.rs
shell/: Cargo.toml
test/central/: sample.db
test/entity/: sample.db
(+24 files in other folders)
