[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
rand = "0.8.4"
rand_core = "0.5.0"
anyhow = "1.0"
x25519-dalek = "1.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
