[package]
name = "common"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
rand = "0.8.4"
rand_core = "0.5.0"
anyhow = "1.0"
x25519-dalek = "1.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = "1.0.1"
pem = "0.8.3"
regex = "1.5.4"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
sha2 = "0.9.8"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
diesel_migrations = "1.4.0"
num-traits = "0.2"
num-derive = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
names = { version = "0.12.0", default-features = false }
base64 = "0.13.0"
libmount = "0.1.15"
libc = "0.2"
users = "0.11.0"
handlebars = "3"