[package]
name = "entity"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
x25519-dalek = "1.1.1"
rand = "0.8.4"
rand_core = "0.5.0"
docker-command = "1.0.1"